--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,10 @@
 html {
 	background-color: black;
 	background-image: radial-gradient(circle, rgb(24, 24, 24), rgb(19, 19, 19), black);
-  height: 100%;
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
-  animation-duration: 3s;
- 
+	height: 100%;
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn;
+	animation-duration: 3s;
 }
 
 .picture {
@@ -27,24 +26,25 @@ h1 {
 	font-family: 'Merriweather', serif;
 	/*  display: inline-block; */
 	resize: none;
-	background-color: rgb(0, 0, 0);
-	background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(24, 24, 24));
 	border-radius: 25px;
-	margin-right: 900px;
-	margin-left: 40px;
+	margin-left: 20px;
 	margin-top: 25px;
 	min-width: 960px;
 	padding-top: 2px;
 	padding-left: 20px;
-  padding-bottom: 1px;
-  
+	padding-bottom: 1px;
 }
+
 
 .Tops {
 	float: right;
-	margin: 20px 250px 0px 0px;
 	font-family: 'Merriweather', serif;
-  font-size: 1em;
+	font-size: 1em;
+	border-radius: 15px;
+	margin-right: 150px;
+	margin-top: 25px;
+	margin-left: 20px;
+
 }
 
 table {
@@ -56,8 +56,10 @@ th,
 td {
 	text-align: left;
 	padding: 8px;
-	text-align: left;
+	margin-right: 20px;
 	border-bottom: 1px solid rgb(0, 0, 0);
+
+
 }
 
 tr {
@@ -95,11 +97,13 @@ p {
 }
 
 .Topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+	float: left;
+	position: relative;
+	left: 42%;
+  	color: #f2f2f2;
+  	text-align: left;
+	padding: 14px 16px;
+	text-decoration: none;
 	font-size: 17px;
 	margin: 0px;
 }
