--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,6 @@ h1 {
 	margin-left: 20px;
 	margin-top: 25px;
 	min-width: 960px;
-	padding-top: 2px;
 	padding-left: 20px;
 	padding-bottom: 1px;
 }
@@ -41,15 +40,17 @@ h1 {
 	font-family: 'Merriweather', serif;
 	font-size: 1em;
 	border-radius: 15px;
-	margin-right: 150px;
-	margin-top: 25px;
-	margin-left: 20px;
-
+	margin-right: 100px;
+	margin-left: 25px;
 }
 
 table {
 	border-collapse: collapse;
 	width: 100%;
+}
+
+.Uus{
+	margin-bottom: 40px;
 }
 
 th,
@@ -58,6 +59,7 @@ td {
 	padding: 8px;
 	margin-right: 20px;
 	border-bottom: 1px solid rgb(0, 0, 0);
+	padding-bottom: 10px;
 
 
 }
