--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@ td {
 	margin-right: 20px;
 	border-bottom: 1px solid rgb(0, 0, 0);
 	padding-bottom: 10px;
+	font-family: 'Merriweather', serif;
 }
 
 tr {
@@ -97,16 +98,22 @@ p {
 	font-size: large;
 }
 
+.Topnav {
+	overflow: hidden;
+	position: fixed;
+	top: 0;
+	left: 42%;
+	width: 100%;
+	font-family: 'Merriweather', serif;
+}
 .Topnav a {
 	float: left;
-	position: relative;
-	left: 42%;
-  	color: #f2f2f2;
-  	text-align: left;
+	left: 50%;
+	color: #f2f2f2;
+	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
 	font-size: 17px;
-	margin: 0px;
 }
 
 .Topnav a:hover {
@@ -130,7 +137,7 @@ p {
 
 .Ho {
 	padding: 35px;
-	padding-top: 50px;
+	margin-top: 60px;
 	margin: auto;
 }
 
