--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,10 @@ h1 {
 	margin-top: 25px;
 	min-width: 960px;
 	padding-left: 20px;
-	padding-bottom: 1px;
+	padding-bottom: 10px;
+	margin-bottom: 20px;
 }
+
 
 
 .Tops {
@@ -43,6 +45,7 @@ h1 {
 	border-radius: 15px;
 	margin-right: 100px;
 	margin-left: 25px;
+	margin-top: 140px;
 }
 
 table {
@@ -57,7 +60,9 @@ table {
 th,
 td {
 	text-align: left;
-	padding: 8px;
+	padding-top: 8px;
+	padding-left: 8px;
+	padding-right: 8px;
 	margin-right: 20px;
 	border-bottom: 1px solid rgb(0, 0, 0);
 	padding-bottom: 10px;
@@ -154,8 +159,23 @@ p {
 	-ms-text-fill-color: transparent;
 	background-clip: text;
 	animation: .8s shake infinite alternate;
+	margin-top: 50px;
 }
 
+.Quotes{
+	color: white;
+	display: block;
+	margin-top: 35px;
+	margin-bottom: 20px;
+	font-size: 28px;
+	font-family: 'Special Elite', cursive;
+	text-align: center;
+	position: relative;
+	right: 0px;
+	top: 0;
+	width: 100%;
+	left: 15%;
+}
 
 /* Adds the animations */
 @-webkit-keyframes fadeIn {
